--- a/styles/style.css
+++ b/styles/style.css
@@ -22,15 +22,18 @@ html {
 
 html,
 body {
-	background     : var(--bg-color);
 	margin         : 0;
 	padding        : 0;
 	border         : 0;
-	font-size      : 1.1rem;
-	font-family    : -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
-	color          : var(--font-color);
-	vertical-align : baseline;
 	min-height     : 100%;
+
+	background     : var(--bg-color);
+	color          : var(--font-color);
+
+	font-family    : -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+	font-size      : 1.1rem;
+
+	vertical-align : baseline;
 }
 
 body, body * {
@@ -47,17 +50,19 @@ footer {
 }
 
 img {
+	display       : block;
 	max-width     : 100%;
 	margin        : auto;
-	display       : block;
+
 	border-radius : 16px;
 }
 
 button {
 	background : hsl(var(--button-hsl), 85%, 85%);
 	color      : hsl(var(--button-hsl), 85%, 15%);
-	transition : background-color, color, transform 0.24s linear;
 	border     : none;
+
+	transition : background-color, color, transform 0.24s linear;
 }
 
 button:active {
@@ -68,6 +73,7 @@ button:active {
 button:hover {
 	background-color : hsl(var(--button-hsl), 85%, 75%);
 	color            : hsl(var(--button-hsl), 85%, 10%);
+
 	transform        : translate(2px, -4px);
 }
 
@@ -85,12 +91,14 @@ header ul {
 }
 
 header ul li {
-	list-style  : none;
 	display     : block;
 	padding     : 0 0.2rem;
 	margin      : 0 0.6rem;
+
 	font-size   : 1.12rem;
 	font-weight : 500;
+
+	list-style  : none;
 }
 
 header nav li a,
@@ -120,10 +128,11 @@ main ol li {
 }
 
 main button {
-	font-size     : 1rem;
 	padding       : 0.6rem 2rem;
 	margin        : 0.2rem 0.4rem;
 	border-radius : 30px;
+
+	font-size     : 1rem;
 	font-weight   : bold;
 }
 
@@ -291,6 +300,15 @@ footer .block-margin {
 	padding   : 0 1.2rem;
 }
 
+.content__frame {
+	width         : 100%;
+	height        : 420px;
+	margin-bottom : 20px;
+
+	border        : none;
+	border-radius : 16px;
+}
+
 .footer-content {
 	display         : flex;
 	flex-direction  : column;
@@ -391,27 +409,32 @@ section.links-list {
 
 .input input,
 .input textarea {
-	font-size     : 96%;
 	display       : block;
 	padding       : 8px 12px;
-	background    : hsl(var(--input-hsl), 15%, 30%);
-	border        : 1px solid hsl(var(--input-hsl), 15%, 32%);
-	border-radius : 4px;
-	color         : hsl(var(--input-hsl), 15%, 80%);
 	margin-top    : 4px;
 	width         : 96%;
+
+	font-size     : 96%;
+
+	background    : hsl(var(--input-hsl), 15%, 30%);
+	color         : hsl(var(--input-hsl), 15%, 80%);
+	border        : 1px solid hsl(var(--input-hsl), 15%, 32%);
+	border-radius : 4px;
 }
 
 .submit input {
-	width         : auto;
-	font-size     : 96%;
 	display       : block;
+	width         : auto;
 	padding       : 0.6rem 1.4rem;
+	margin-top    : 4px;
+
+	font-size     : 96%;
+
 	background    : hsl(var(--button-hsl), 85%, 85%);
+	color         : hsl(var(--button-hsl), 85%, 15%);
 	border        : 1px solid hsl(var(--button-hsl), 85%, 82%);
 	border-radius : 8px;
-	color         : hsl(var(--button-hsl), 85%, 15%);
-	margin-top    : 4px;
+
 	cursor        : pointer;
 }
 
@@ -437,10 +460,11 @@ section.links-list {
 }
 
 aside.alert {
-	color     : hsl(50deg 45% 65%);
-	font-size : 84%;
 	padding   : 4px 0;
 	margin    : 0 0 8px 0;
+
+	font-size : 84%;
+	color     : hsl(50deg 45% 65%);
 }
 
 .comments .user-info {
@@ -458,5 +482,5 @@ aside.alert {
 }
 
 .mg-bottom {
-	margin-bottom: 1.2rem;
+	margin-bottom : 1.2rem;
 }
